force-app/main/default/objects/ozbee__Production_Job_Report__c/ozbee__Production_Job_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Report</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000000000}</displayFormat>
        <label>Daily Report Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>