force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>