force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>ozbee__Building__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>