force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/CompanyCam_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>CompanyCam_Project_ID__c</fullName>
    <formula>Building__r.ozbee__CompanyCam_Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyCam Project ID</label>
    <type>Text</type>
</CustomField>