force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>