force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>