force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Activities__c.field-meta.xml
<CustomField>
    <fullName>Show_Activities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Activities</label>
    <type>Checkbox</type>
</CustomField>