force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Show_Disclaimer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Disclaimer</label>
    <type>Checkbox</type>
</CustomField>