force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Expected_Production__c.field-meta.xml
<CustomField>
    <fullName>Show_Expected_Production__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Expected Production</label>
    <type>Checkbox</type>
</CustomField>