force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Show_Forecast__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Weather</label>
    <type>Checkbox</type>
</CustomField>