force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Manpower__c.field-meta.xml
<CustomField>
    <fullName>Show_Manpower__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Manpower</label>
    <type>Checkbox</type>
</CustomField>