force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Materials__c.field-meta.xml
<CustomField>
    <fullName>Show_Materials__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Materials</label>
    <type>Checkbox</type>
</CustomField>