force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Observations__c.field-meta.xml
<CustomField>
    <fullName>Show_Observations__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Observations</label>
    <type>Checkbox</type>
</CustomField>