force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_SOW__c.field-meta.xml
<CustomField>
    <fullName>Show_SOW__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show SOW</label>
    <type>Checkbox</type>
</CustomField>