force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Show_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Show_Visitors__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Visitors</label>
    <type>Checkbox</type>
</CustomField>