force-app/main/default/objects/ozbee__Production_Job_Report__c/fields/Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Superintendent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superintendent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>