force-app/main/default/objects/ozbee__Production_Job_Report__c/validationRules/Production_Job_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Job_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
   Opportunity__c != ozbee__Production_Job__r.ozbee__Opportunity__c,
   true,
   false
)</errorConditionFormula>
    <errorMessage
  >Opportunity must be the same as the production job opportunity</errorMessage>
</ValidationRule>